Bug 147299 - For Japanese vertical writing the candidate list rotates (Microsoft IME)
Summary: For Japanese vertical writing the candidate list rotates (Microsoft IME)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All Windows (All)
: medium trivial
Assignee: Jonathan Clark
URL:
Whiteboard: target:25.8.0 target:25.2.5
Keywords:
Depends on:
Blocks: CJK-Japanese IME
  Show dependency treegraph
 
Reported: 2022-02-09 04:42 UTC by Saburo
Modified: 2025-05-27 19:33 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Writer Input Thank you in Japanese (70.11 KB, image/png)
2022-02-09 04:44 UTC, Saburo
Details
Windows LibreWriter ver.7.1.8 (40.90 KB, image/png)
2022-02-24 04:42 UTC, Saburo
Details
ubuntu Libre Writer ver.7.3.0 (107.49 KB, image/png)
2022-02-24 04:43 UTC, Saburo
Details
Debian testing Libreoffice Writer 7.3.4 (123.76 KB, image/png)
2022-07-12 00:47 UTC, Franklin Weng
Details
Tests with Windows 11 (40.73 KB, image/png)
2025-05-23 12:11 UTC, Jonathan Clark
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Saburo 2022-02-09 04:42:20 UTC
Description:
LibreOffice 7.2 over
When vertical writing, the candidate list is rotated 90 degrees.

Steps to Reproduce:
Writer
1. Go to Format -> Page -> Page
2. Set Text direction to Right-to-left (vertical).
3. Type some Japanese text

Actual Results:
the candidate list is rotated 90 degrees.

Expected Results:
vertical text or horizontal text


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 80723fccbb03c215bab84b10ac1eefaedef66b7c
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded
Comment 1 Saburo 2022-02-09 04:44:13 UTC
Created attachment 178157 [details]
Writer Input  Thank you in Japanese
Comment 2 Saburo 2022-02-24 04:42:41 UTC
Created attachment 178495 [details]
Windows LibreWriter ver.7.1.8

Vertical writing image
Comment 3 Saburo 2022-02-24 04:43:50 UTC
Created attachment 178496 [details]
ubuntu Libre Writer ver.7.3.0

Horizontal writing image
Comment 4 Regina Henschel 2022-06-29 23:30:02 UTC
Please attach such example document itself, not only images. For people in Europa it is hard to produce Japanese text.
Comment 5 Saburo 2022-07-11 06:29:36 UTC
(In reply to Regina Henschel from comment #4)
> Please attach such example document itself, not only images. For people in
> Europa it is hard to produce Japanese text.

Sorry.
This is problem during Japanese input and cannot be provided as documentation.
Comment 6 Regina Henschel 2022-07-11 12:29:22 UTC
(In reply to Saburo from comment #5)
> Sorry.
> This is problem during Japanese input and cannot be provided as
> documentation.

I see. The screenshot uses LibreOffice on Ubuntu. Is it possible for you to test whether the error also occurs with another operating system?

@Franklin: Could you please try to reproduce the problem? Or do you know someone else who can test Japanese input?
Comment 7 Franklin Weng 2022-07-12 00:46:36 UTC
(In reply to Regina Henschel from comment #6)
> (In reply to Saburo from comment #5)
> > Sorry.
> > This is problem during Japanese input and cannot be provided as
> > documentation.
> 
> I see. The screenshot uses LibreOffice on Ubuntu. Is it possible for you to
> test whether the error also occurs with another operating system?
> 
> @Franklin: Could you please try to reproduce the problem? Or do you know
> someone else who can test Japanese input?

I could not reproduce it in my box:

Version: 7.3.4.2 / LibreOffice Community
Build ID: 728fec16bd5f605073805c3c9e7c4212a0120dc5
CPU threads: 4; OS: Linux 5.18; UI render: default; VCL: kf5 (cairo+xcb)
Locale: zh-TW (zh_TW.UTF-8); UI: zh-TW
Calc: threaded

Running in Debian testing with "gcin" IM engine, which also contains anthy Japanese input method.  Attach screenshot later.
Comment 8 Franklin Weng 2022-07-12 00:47:52 UTC
Created attachment 181233 [details]
Debian testing Libreoffice Writer 7.3.4

With gcin engine and anthy input method, under zh_TW locale
Comment 9 Saburo 2022-07-19 23:48:48 UTC
When I changed the Japanese input from "Microsoft IME" to "Google IME", it became horizontal writing like ubuntu(iBus-Mozc).

It seems to be a problem peculiar to "Microsoft IME".
Comment 10 Jonathan Clark 2025-05-23 12:11:55 UTC
Created attachment 200926 [details]
Tests with Windows 11

Screenshot comparing the behavior of Word vs Writer, using both the new Windows 11 IME as well as the legacy IME.

There are issues in Writer. The legacy IME displays the text incorrectly. The new IME isn't vertical at all, and overlaps the text.
Comment 11 Commit Notification 2025-05-27 13:13:16 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a7f0e7b40fff2238a5cb2bfac750b22d8d5ee15d

tdf#147299 vcl: Set Microsoft ja IME to vertical mode in vertical text

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2025-05-27 19:33:59 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/64f383d7ef8a46053f318515f200d4b85883e500

tdf#147299 vcl: Set Microsoft ja IME to vertical mode in vertical text

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.